--- a/src/themes/collspec/app/home-page/top-level-community-list/top-level-community-list.component.html
+++ b/src/themes/collspec/app/home-page/top-level-community-list/top-level-community-list.component.html
@@ -1,6 +1,6 @@
 <!-- Déclare le template de fallback en haut -->
 <ng-template #loadingContent>
-  <ds-loading message="{{ 'loading.top-level-communities' | translate }}"></ds-loading>
+  <ds-loading message="..."></ds-loading>
 </ng-template>
 
 <div class="container-bib mt-5">
