--- a/src/themes/collspec/app/vedette/vedette-uuid/vedette-uuid.component.html
+++ b/src/themes/collspec/app/vedette/vedette-uuid/vedette-uuid.component.html
@@ -22,6 +22,6 @@
   </div>
   }
   @else {
-  <ds-loading  message="Loading..."></ds-loading>
+  <ds-loading  message="Chargement..."></ds-loading>
   }
 </section>
