--- a/src/themes/collspec/app/vedette/vedette-liste/vedette-liste.component.scss
+++ b/src/themes/collspec/app/vedette/vedette-liste/vedette-liste.component.scss
@@ -8,7 +8,7 @@
 ------------------------------------------------------- */
 
 .bib-title {
-  font-weight: 500;
+  font-weight: 500!important;
   font-family: $font-family-serif;
   font-variant-numeric: lining-nums tabular-nums;
   font-feature-settings: 'liga' off, 'clig' off;
