--- a/src/themes/collspec/styles/_global-styles.scss
+++ b/src/themes/collspec/styles/_global-styles.scss
@@ -58,15 +58,6 @@ a:hover {
   text-decoration: none !important;
 }
 
-a.lead {
-  font-weight: 450 !important;
-  color:$blue;
-}
-
-a.lead:hover {
-  color: $autreblue;
-}
-
 /* Styles pour les badges */
 .badge-secondary {
   background-color: var(--bs-primary);
@@ -85,6 +76,24 @@ nav#admin-sidebar a {
     font-size: 1rem;
   }
 }
+
+/* Styles pour les listes */
+a.lead {
+  display: flex;
+  width: 100%;
+  padding: 14px;
+  flex-direction: column;
+  align-items: flex-start;
+  border-radius: 0px 0px 12px 12px;
+  border-top: 1px solid #C3CCD5;
+  background: #eef4f76b!important;
+  position: relative;
+
+    &:hover {
+      background: #EEF4F7!important;
+    }
+}
+
 
 /* -------------------------------------------------------
    Styles pour les paragraphes et le texte
@@ -638,6 +647,10 @@ a.collspec-menu {
   font-family: 'Font Awesome 6 Free', serif; // ou 'FontAwesome' selon la version chargée
   font-weight: 900;
   content: "\f0c9";
+}
+
+.font-blue {
+  background: #f8f9fa!important;
 }
 
 
